# eXwonder-backend

./: .env.template  .gitignore  README.md  dump.rdb  pyproject.toml  pytest.ini  requirements.txt  schema.yml
.github/workflows/: ci-cd.yml.disabled
common/: consumers.py  services.py
core/: asgi.py  celery_setup.py  settings.py  urls.py
messenger/: consumers.py  models.py  routing.py  serializers.py  services.py
messenger/migrations/: 0001_initial.py  0002_chat_is_read.py  0003_message_is_edit.py
notifications/: __init__.py  admin.py  consumers.py  models.py  routing.py  serializers.py  tasks.py
notifications/migrations/: 0001_initial.py  0002_alter_notification_options_notification_is_read.py
posts/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_alter_comment_options_alter_post_options.py  0004_alter_post_options.py  0005_comment_time_added.py  0006_alter_comment_time_added.py  0007_alter_comment_options_saved.py  0008_rename_like_postlike_commentlike.py  0009_alter_saved_options.py  0010_alter_post_options_alter_post_table.py  0011_alter_comment_options_alter_commentlike_options_and_more.py  0012_tag_post_tags.py  0013_post_pinned.py
posts/services/: __init__.py  base_viewsets.py  likes_helpers.py  mixins.py  services.py
scripts/: celery.sh  gunicorn.sh  notifications.sh  tests.sh
templatetags/: reset_password_url.py
tests/: __init__.py  conftest.py  factories.py  generics.py  mixins.py  services.py
tests/tests/: test_comments.py  test_followers.py  test_followings.py  test_follows.py  test_likes.py  test_posts.py  test_users.py
users/: admin.py  authentication.py  forms.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_follow.py  0003_alter_follow_options.py  0004_alter_exwonderuser_options.py  0005_remove_exwonderuser_is_active_and_more.py  0006_alter_exwonderuser_email.py  0007_alter_exwonderuser_email.py  0008_exwonderuser_is_active.py  0009_exwonderuser_is_staff.py  0010_exwonderuser_groups_exwonderuser_is_superuser_and_more.py  0011_alter_exwonderuser_options_alter_exwonderuser_avatar_and_more.py  0012_exwonderuser_username_index.py  0013_alter_follow_options_and_more.py  0014_exwonderuser_desc_exwonderuser_name.py  (+3 more)
(+22 files in other folders)
