[project]
name = "eXwonder-backend"
version = "1.5.0"
description = "Backend for simple photos-based socal network eXwonder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery==5.4.0",
    "channels>=4.2.0",
    "channels-redis>=4.2.1",
    "dj-rest-auth==6.0.0",
    "django-cors-headers==4.5.0",
    "django-environ==0.11.2",
    "django==5.1.1",
    "djangorestframework==3.15.2",
    "drf-spectacular==0.27.2",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "kombu>=5.4.2",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "pytest-django==4.9.0",
    "pytest-factoryboy==2.7.0",
    "pytest==8.3.3",
    "pytz==2024.2",
    "rabbitmq>=0.2.0",
    "redis==5.1.0",
    "ruff==0.8.0",
    "daphne>=4.1.2",
    "pytest-asyncio>=0.25.1",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "DJ",
    "I",
    "ANN",
]
ignore = ["ANN204", "ANN002", "ANN003"]
dummy-variable-rgx = "__.*"
exclude = ["manage.py", "users/migrations/*.py", "posts/migrations/*.py"]

[tool.ruff.format]
quote-style = "double"
exclude = ["manage.py", "users/migrations/*.py", "posts/migrations/*.py"]
